tests/NormalTests/paczka1/fuzzy1/15340252.err
Error in line 2: VKu A588 21,8
Error in line 3: Iq5o A588 79,9
Error in line 7: A588 A588 74,3
Error in line 12: A588 S523 27,4
Error in line 4: aXLT A267 80,1
Error in line 32: A588 A588 77,5
Error in line 37: Iq5o S864 93,0
